[package]
name = "fmt-dur"
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
authors = ["mlm-games <125530737+mlm-games@users.noreply.github.com>"]
description = "Strict human-readable Duration parser/formatter: '2d3h4m', '90s', '1.5h'. Enforces unit order, no duplicates, and precise decimal rules."
license = "MIT OR Apache-2.0"
repository = "https://github.com/mlm-games/fmt-dur"
homepage = "https://github.com/mlm-games/fmt-dur"
documentation = "https://docs.rs/fmt-dur"
readme = "README.md"
keywords = ["duration", "time", "parse", "format", "readable"]

# categories = ["date-and-time", "parsing"]
include = ["src/**", "README.md", "LICENSE*", "CHANGELOG.md", "Cargo.toml"]

[features]
default = []
# Allows spaces/underscores and case-insensitive units, but keeps ordering/decimal rules
loose = []
# for DurationStr
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0", optional = true }

[package.metadata.docs.rs]
all-features = true
